--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">AirDesk</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_workspaces">Airdesk Workspaces</string>
+    <string name="title_activity_local_workspace">Local Workspace</string>
+    <string name="title_activity_airdesk">AirdeskActivity</string>
+    <string name="hello_world">Hello world!</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_workspace_title">Create Workspace</string>
+    <string name="create_workspace_name">Name</string>
+    <string name="create_workspace_quota">Quota</string>
 </resources>
