--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_activity_airdesk">AirdeskActivity</string>
     <string name="hello_world">Hello world!</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_workspace_title">Create Workspace</string>
     <string name="create_workspace_name">Name</string>
@@ -20,5 +20,6 @@
     <string name="privacy_title">itemTitle</string>
     <string name="workspace_name">workspace_name</string>
     <string name="update">Update</string>
+    <string name="unsubscribe">Unsubscribe</string>
     <string name="cancel">Cancel</string>
 </resources>
