--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="update">Update</string>
     <string name="unsubscribe">Unsubscribe</string>
     <string name="cancel">Cancel</string>
+    <string name="file_name">File name</string>
+    <string name="create">Create</string>
 </resources>
