--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="cancel">Cancel</string>
     <string name="file_name">File name</string>
     <string name="create">Create</string>
+    <string name="save">Save</string>
 </resources>
