--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">AirDesk</string>
 
+    <string name="port">10001</string>
+
     <string name="action_settings">Settings</string>
     <string name="title_activity_workspaces">Airdesk Workspaces</string>
     <string name="title_activity_local_workspace">Local Workspace</string>
@@ -25,4 +27,7 @@
     <string name="file_name">File name</string>
     <string name="create">Create</string>
     <string name="save">Save</string>
+    <string name="title_activity_wifi_direct">WifiDirectActivity</string>
+    <string name="peer_devices">Peer devices</string>
+    <string name="remembered_groups">Remembered groups</string>
 </resources>
