--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="title_activity_wifi_direct">WifiDirectActivity</string>
     <string name="peer_devices">Peer devices</string>
     <string name="remembered_groups">Remembered groups</string>
+    <string name="device_name">DeviceName</string>
 </resources>
