--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="peer_devices">Peer devices</string>
     <string name="remembered_groups">Remembered groups</string>
     <string name="device_name">DeviceName</string>
+    <string name="email_nickname">email_nickname</string>
 </resources>
